# udemy-summarize

./: .gitignore  README.md  pyproject.toml
scripts/: patch_playwright.py
udemy_grab/: auth.py  browser.py  cli.py  config.py  curriculum.py  renderer.py  transcript.py
